--- a/pagamento.html
+++ b/pagamento.html
@@ -82,7 +82,7 @@
     <!-- Comprovante -->
     <div class="mb-6">
       <label class="block mb-1 font-semibold text-gray-800">📎 Enviar Comprovante:</label>
-      <input type="file" class="w-full border p-3 rounded-lg bg-gray-50 hover:bg-gray-100 transition" />
+      <input type="file" name="comprovante" class="w-full border p-3 rounded-lg bg-gray-50 hover:bg-gray-100 transition" />
     </div>
 
     <!-- Botão Enviar -->
@@ -142,10 +142,11 @@
       formData.append("comprovante", comprovante);
 
       try {
-        const response = await fetch("http://localhost:3000/enviar-pagamento", {
-          method: "POST",
-          body: formData
-        });
+        await fetch("https://site-livro-backend.onrender.com/enviar-pagamento", {
+           method: "POST",
+           body: formData
+      });
+
 
         if (response.ok) {
           document.getElementById("alertaSucesso").classList.remove("hidden");
