Atualiza index.html com melhorias no layout e funcionalidades

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8">
       <div class="animate-fade text-center md:text-left">
         <h2 class="text-3xl sm:text-4xl font-bold mb-2">📖 Pré-venda Exclusiva (Até 30/09/2025)</h2>
-        <p class="text-md md:text-lg mb-4">"A Lenda do Caos - Tríplice Caótica" já está disponível!</p>
+        <p class="text-md md:text-lg mb-4">"A Lenda do Caos - Tríplice Caótica" já está disponível! Comprando na pré venda você recebe um marca páginas e um conto exclusivo dentro do universo do livro!</p>
         <button 
           onclick="adicionarLivro('A Lenda do Caos - Tríplice Caótica', 52.9, 'LdC1.png')" 
           class="bg-white text-purple-700 px-6 py-2 rounded-full font-semibold hover:bg-gray-100 transition-all shadow-md">
@@ -84,7 +84,7 @@
         <div class="relative w-full h-64 mb-4">
           <img src="LdC1.png" class="w-full h-full object-cover rounded-2xl transform group-hover:scale-105 transition-all" />
         </div>
-        <h3 class="text-xl font-bold text-center mb-1">A Lenda do Caos - Tríplice Caótica</h3>
+        <h3 class="text-xl font-bold text-center mb-1">A Lenda do Caos - Tríplice Caótica + Marca-páginas + Conto exclusivo</h3>
         <p class="text-lg mt-2 text-center">
           <del class="text-red-500 text-base mr-2">R$ 57,90</del>
           <strong class="text-green-600 text-xl font-bold">R$ 52,90</strong>
@@ -120,8 +120,8 @@
   <section class="bg-gradient-to-br from-indigo-600 to-purple-800 text-white py-16 px-4 sm:px-6">
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl font-extrabold mb-4">✍️ Sobre o Autor</h2>
-      <p class="text-lg leading-relaxed">Pedro Henrique é um autor brasileiro apaixonado por mundos fantásticos e histórias emocionais...</p>
-      <p class="mt-4 text-md opacity-90">Também atua como roteirista e narrador de histórias...</p>
+      <p class="text-lg leading-relaxed">Pedro Henrique é um autor brasileiro apaixonado por mundos fantásticos, suspense e histórias que exploram o lado mais profundo da mente humana. Com um estilo marcante, ele combina emoções reais com mistérios sobrenaturais, criando tramas envolventes que prendem o leitor da primeira à última página.</p>
+      <p class="mt-4 text-md opacity-90"> Além da literatura, Pedro também atua como roteirista, e contador de histórias. Seu universo expandido começa com "A Lenda do Caos", mas está longe de terminar.</p>
     </div>
   </section>
 
