feat(popup): reorganiza estrutura do popup de detalhes para manter botão no rodapé

--- a/pagamento.html
+++ b/pagamento.html
@@ -167,7 +167,8 @@
     }
   } catch (error) {
     console.error(error);
-    alert("Erro de conexão.");
+   alert("✨ Tudo certo! Agora é só conferir seu e-mail (até a pasta de spam). Se não encontrar nada em alguns minutinhos, é só chamar a gente!");
+
   } finally {
     // Oculta mensagem de aguarde
     aguarde.classList.add("hidden");
