--- a/index.html
+++ b/index.html
@@ -345,9 +345,32 @@
 </div>
 
     <!-- Capa do livro -->
+      <!-- POPUP DE DETALHES -->
+<div id="popupDetalhes" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
+  <div class="bg-white rounded-3xl shadow-2xl w-full max-w-5xl h-[90vh] flex flex-col sm:flex-row overflow-hidden animate-fade relative border-t-4 border-purple-700">
+    
+    <!-- Botão fechar -->
+    <button onclick="fecharDetalhes()" class="absolute top-4 right-4 text-gray-400 hover:text-red-500 text-3xl font-bold z-10 transition">&times;</button>
+
+    <!-- Área de texto -->
+<div class="flex-1 p-6 sm:p-10 overflow-y-auto flex flex-col">
+  <h2 id="detalheTitulo" class="text-3xl font-bold text-purple-700 mb-4"></h2>
+  <p id="detalhePreco" class="text-xl font-bold text-green-700 mb-4 hidden"></p>
+  <div id="detalheDescricao" class="text-gray-800 leading-relaxed whitespace-pre-line max-h-[50vh] overflow-y-auto mb-6"></div>
+
+  <!-- Botões fixos ao rodapé -->
+  <div id="botoesDetalhes" class="mt-auto flex flex-col sm:flex-row gap-4 justify-center pt-6 border-t border-gray-200">
+    <!-- Botões inseridos via JS -->
+  </div>
+</div>
+
+    <!-- Capa do livro -->
     <div class="w-full sm:w-1/3 bg-gray-100 p-6 flex items-center justify-center border-l border-gray-200">
       <img id="detalheImagem" src="" alt="Capa da Obra" class="w-full h-auto max-h-[80vh] object-contain rounded-2xl shadow-lg" />
     </div>
+
+  </div>
+</div>
 
   </div>
 </div>
