--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
 
 <!-- POPUP DE DETALHES -->
 <div id="popupDetalhes" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
-  <div class="bg-white rounded-3xl shadow-2xl w-full max-w-5xl h-[90vh] flex flex-col sm:flex-row overflow-hidden animate-fade relative border-t-4 border-purple-700">
+  <div class="bg-white rounded-3xl shadow-2xl w-full max-w-5xl h-[90vh] flex flex-col-reverse sm:flex-row overflow-hidden animate-fade relative border-t-4 border-purple-700">
+
     
     <!-- Botão fechar -->
     <button onclick="fecharDetalhes()" class="absolute top-4 right-4 text-gray-400 hover:text-red-500 text-3xl font-bold z-10 transition">&times;</button>
@@ -344,10 +345,15 @@
       </div>
     </div>
 
-    <!-- Capa do livro -->
-    <div class="w-full sm:w-1/3 bg-gray-100 p-6 flex items-center justify-center border-l border-gray-200">
-      <img id="detalheImagem" src="" alt="Capa da Obra" class="w-full h-auto max-h-[60vh] sm:max-h-[80vh] object-contain rounded-2xl shadow-lg" />
-    </div>
+   <div class="w-full sm:w-1/3 bg-gray-100 p-4 sm:p-6 flex items-center justify-center border-t sm:border-t-0 sm:border-l border-gray-200">
+  <img 
+    id="detalheImagem" 
+    src="" 
+    alt="Capa da Obra" 
+    class="w-40 sm:w-full h-auto max-h-52 sm:max-h-[80vh] object-contain rounded-2xl shadow-lg"
+  />
+</div>
+
 
   </div>
 </div>
