Adiciona link na página

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ body.dark-mode nav { box-shadow: 0 2px 12px rgba(0,0,0,.35); }
                     imagem: 'IdW.jpg',
                     youtube: null,
                     tipo: 'weblivro',
-                    hotmartLink: 'https://pay.hotmart.com/SEU_HOTLINK_WILLOWBROOK'
+                    hotmartLink: 'https://hotmart.com/pt-br/marketplace/produtos/o-incidente-de-willowbrook/I101263325N'
                   })"
                   class="w-full bg-purple-600 text-white py-2 rounded-full hover:bg-purple-700 transition mt-4">
                   Ver Detalhes
